# sherlok

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  main_simple.cpp
.github/workflows/: build.yml
build-portable/: ALL_BUILD.vcxproj  CMakeCache.txt  FileEncryptionDemo.sln  FileEncryptionDemo.vcxproj  FileEncryptionDemo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-portable/FileEncryptionDemo.dir/Release/: FileEncryptionDemo.exe.recipe
build-portable/FileEncryptionDemo.dir/Release/FileEncr.65C9E150.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-portable/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-portable/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build-portable/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-portable/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FileEncryptionDemo.sln  FileEncryptionDemo.vcxproj  FileEncryptionDemo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-win/FileEncryptionDemo.dir/Release/: FileEncryptionDemo.exe.recipe
build-win/FileEncryptionDemo.dir/Release/FileEncr.826A0275.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
build-win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp  main_simple.cpp
src/core/: encryption_service.cpp  encryption_service.h  file_manager.cpp  file_manager.h
src/crypto/: aes_crypto.cpp  aes_crypto.h  key_manager.cpp  key_manager.h
src/ui/: encryption_dialog.cpp  encryption_dialog.h  main_window.cpp  main_window.h  password_lock.cpp  password_lock.h  password_lock_mac.mm
src/utils/: file_utils.cpp  file_utils.h  logger.cpp  logger.h  platform.cpp  platform.h
